<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AuxConvertedMeasure" Id="{38ed663c-b299-417e-83e0-d2a7761aaf59}">
    <Declaration><![CDATA[TYPE ST_AuxConvertedMeasure :
	STRUCT
		sumOfEnergy : LREAL;									//index 2. 
		frequency : LREAL;										//4
		sumOfEnergyNeg : LREAL;									//5
		sumOfActivePower : LREAL;								//10
		sumOfApparentPower : LREAL;								//11
		sumOfReactivePower : LREAL;								//12
		adcTemp : LREAL ;										//100
		aHarmonicCurrentValue : ARRAY[1..3,1..21] OF LREAL;		//
		aHarmonicCurrentRatio : ARRAY[1..3,1..21] OF LREAL;		//
		aHarmonicVoltageValue : ARRAY[1..3,1..21] OF LREAL;		//
		aHarmonicVoltageRatio : ARRAY[1..3,1..21] OF LREAL;		//
		aAuxPowerValues : ARRAY[1..3] OF ST_ConvertedPower;		//
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>